--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -367,7 +367,7 @@
                 </figure>
                 <p>En el diagrama x-t del MRU, la pendiente (\(\text{tg } \alpha\)) de la recta que describe la trayectoria del moviemiento, calculada sobre un intervalo de tiempo determinado, se obtiene dividiendo el cambio en la coordenada vertical (que es la posición del móvil) por el cambio en la coordenada horizontal (que es el tiempo transcurrido). En el diagrama x-t, esto corresponde directamente a la <strong>velocidad media</strong> del movimiento durante ese intervalo:</p>
                 <div class="container">
-                    <div  class="center">$$ \text{tg } \alpha = \frac{x(t) - x_0}{t} = v_{\text{media}}$$</div>
+                    <div  class="center">$$ \text{tg } \alpha = \frac{x(t_1) - x_0}{t_1} = v_{\text{media}}$$</div>
                     <div class="right" id="[1.26]">[1.26]</div>
                 </div>
                 </p>
