--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -18,9 +18,10 @@
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
         <!-- loads page script files-->
-        <script src="scripts/ArrayFunctions.js"></script> 
+        <!--<script src="scripts/ArrayFunctions.js"></script> 
         <script src="scripts/SVGDrawing.js"></script>
-        <script src="scripts/KinematicsPage.js" defer></script>
+        <script src="scripts/KinematicsPage.js" defer></script>-->
+        <script type="module" src="scripts/KinematicsPage.js"></script>
         <!--<script src="scripts/SelectLanguage.js" defer></script>-->
     </head>
     <body>
