--- a/geometry_en.html
+++ b/geometry_en.html
@@ -89,31 +89,36 @@
         <ul>
             <li>
                 <a href="https://openstax.org/books/prealgebra-2e/pages/9-3-use-properties-of-angles-triangles-and-the-pythagorean-theorem#:~:text=of%20the%20hypotenuse.-,THE%20PYTHAGOREAN%20THEOREM,-In%20any%20right"
-                    target="_blank"><!--target="_blank" will display the link in a new tab-->
+                    target="_blank"
+                    rel="noopener noreferrer">
                     The Pitagorean Theorem. Prealgebra 2e. 9.3. Openstax.
                 </a>
             </li>
             <li>
                 <a href="http://encyclopediaofmath.org/index.php?title=Pythagorean_theorem&oldid=40035"
-                    target="_blank">
+                    target="_blank"
+                    rel="noopener noreferrer">
                     Pythagorean theorem. Encyclopedia of Mathematics.
                 </a>
             </li>
             <li>
                 <a href="https://encyclopediaofmath.org/wiki/Sine#:~:text=the%20hyperbolic%20sine.-,Comments,-Of%20course%2C"
-                    target="_blank">
+                    target="_blank"
+                    rel="noopener noreferrer">
                     Sine. Encyclopedia of Mathematics.
                 </a>
             </li>
             <li>
                 <a href="https://www.mathsisfun.com/algebra/trigonometry.html#:~:text=gives%20the%20answers!-,Sine%2C%20Cosine%20and%20Tangent,-The%20main%20functions"
-                    target="_blank">
+                    target="_blank"
+                    rel="noopener noreferrer">
                     Sine, Cosine and Tangent. Mathisfun.
                 </a>
             </li>
             <li>
                 <a href="https://openstax.org/books/algebra-and-trigonometry/pages/7-2-right-triangle-trigonometry#:~:text=Using%20Right%20Triangles%20to%20Evaluate%20Trigonometric%20Functions"
-                    target="_blank">
+                    target="_blank"
+                    rel="noopener noreferrer">
                     Using Right Triangles to Evaluate Trigonometric Functions. Openstax.
                 </a>
             </li>
