--- a/geometry_en.html
+++ b/geometry_en.html
@@ -54,7 +54,10 @@
             <div  class="right" id="[2.1]">[2.2]</div>
         </div>
         <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
-            <img src="images\RightTriangle.svg" width="300" height="225" />
+            <img src="images\RightTriangle.svg" 
+                width="300" 
+                height="225" 
+                alt="Right triangle diagram"/>
 
             <figcaption><b>Figure 2.1</b> Right triangle with hypotenuse c and legs a and b.</figcaption>
         </figure>
@@ -65,7 +68,10 @@
             rectangular coordinate system, and a point P with coordinates (x,y) in the circunference. And let's name &alpha; the angle between the x-axis and the segment \(\overline {OP}\), as shown in figure below. Then, \(\sin \alpha\) is the ratio y/r, `cos alpha` is the ratio x/r and \(\tan \alpha\) is the ratio y/x.
         </p>
         <figure class="centered"><!--Circunference of radius r with a point P and angle &alpha; with x-axis.-->
-            <img src="images\Circunference_and_coordinates.svg" width="300" height="300" />
+            <img src="images\Circunference_and_coordinates.svg" 
+                width="300" 
+                height="300" 
+                alt="Diagram of a circle with point P and inscribed right triangle."/>
             <figcaption><b>Figure 2.2</b> Circunference of radius r with a point P and angle &alpha; with x-axis.
             </figcaption>
         </figure>
