--- a/geometry_es.html
+++ b/geometry_es.html
@@ -57,7 +57,7 @@
             <div  class="right" id="[1]">[2]</div>
         </div>
         <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
-            <img src="images\RightTriangle.svg" width="300" height="225" />
+            <img src="images\RightTriangle.svg" width="300" height="225" alt="Diagrama de un triángulo rectángulo"/>
             <figcaption><b>Figura 1</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
         </figure>
     </section>
@@ -66,7 +66,10 @@
             Consideremos una circunferencia con radio de longitud r con centro en el origen <i>O</i> en a sistema de coordenadas rectangulares, y un punto P con coordenadas (x,y) en la circunferencia. Y nombremos &alpha; a el ángulo entre el eje x y el segmento \(\overline {OP}\), según se muestra en la siguiente figura. Entonces, \(\sin \alpha\) es el cociente y/r.
         </p>
         <figure class="centered"><!--Circunference of radius r with a point P and angle &alpha; with x-axis.-->
-            <img src="images\Circunference_and_coordinates.svg" width="300" height="300" />
+            <img src="images\Circunference_and_coordinates.svg" 
+                width="300" 
+                height="300" 
+                alt="Diagrama de una circunferencia con punto P y triángulo rectángulo inscrito."/>
             <figcaption class="lang lang-es" lang="es"><b>Figure 2.2</b> Circunferencia de radio r con un punto P y su ángulo &alpha; con el eje x.
             </figcaption>
         </figure>
