--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <img src="images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
         </figure>
         
-        <label for="langSelector">Select Language:</label>
+        <label class="lang lang-en" lang="en" for="langSelector">Select Language:</label>
+        <label class="lang lang-es" lang="es" for="langSelector">Selecciona un Idioma:</label>
         <select id="langSelector">
             <option value="en">English</option>
             <option value="es">Español</option>
